<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/singinRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/holo_orange_light"
    tools:context="com.amazonaws.mobilehelper.auth.signin.userpools.SignUpActivity">

    <TextView
        android:id="@+id/signup_message"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signup_username"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/signup_username"
        android:layout_marginTop="23dp"
        android:text="@string/sign_up_header"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/signup_username"
        android:layout_width="300dp"
        android:layout_height="@dimen/user_pools_activity_text_height"

        android:layout_alignLeft="@+id/signup_button"
        android:layout_alignStart="@+id/signup_button"
        android:layout_below="@+id/signup_message"
        android:layout_marginTop="20dp"
        android:hint="@string/username_text"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/signup_password"
        android:layout_width="300dp"
        android:layout_height="@dimen/user_pools_activity_text_height"

        android:layout_alignLeft="@+id/signup_given_name"
        android:layout_alignStart="@+id/signup_given_name"
        android:layout_below="@+id/signup_given_name"
        android:layout_marginTop="16dp"
        android:hint="@string/sign_in_password"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/signup_given_name"
        android:layout_width="300dp"
        android:layout_height="@dimen/user_pools_activity_text_height"
        android:layout_alignLeft="@+id/signup_email"
        android:layout_alignStart="@+id/signup_email"
        android:layout_below="@+id/signup_email"
        android:layout_marginTop="19dp"
        android:hint="@string/given_name_text"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/signup_email"
        android:layout_width="300dp"
        android:layout_height="@dimen/user_pools_activity_text_height"
        android:layout_alignLeft="@+id/signup_username"
        android:layout_alignStart="@+id/signup_username"
        android:layout_below="@+id/signup_username"
        android:layout_marginTop="10dp"
        android:hint="@string/email_address_text"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/signup_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_pools_activity_text_height"
        android:layout_above="@+id/signup_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:inputType="phone" />


    <Button
        android:id="@+id/signup_button"
        android:layout_width="300dp"
        android:layout_height="@dimen/user_pools_activity_button_height"
        android:layout_below="@+id/signup_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:background="@drawable/redbutton"
        android:onClick="signUp"
        android:text="@string/title_activity_sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/user_pools_activity_button_text_size" />


</RelativeLayout>
