<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/holo_orange_light"
    tools:context="com.amazonaws.mobilehelper.auth.signin.userpools.SignUpConfirmActivity">

    <TextView
        android:id="@+id/confirm_account_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_confirm_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignBottom="@+id/confirm_account_space2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Space
        android:id="@+id/confirm_account_space1"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/confirm_account_title"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/confirm_account_message1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_confirm_code_sent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:layout_below="@+id/confirm_account_space1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Space
        android:id="@+id/confirm_account_space2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_pools_activity_intra_group_separation"
        android:layout_marginBottom="51dp"
        android:layout_above="@+id/confirm_account_username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/confirm_account_message2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_confirm_enter_code"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:layout_below="@+id/confirm_account_message1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Space
        android:id="@+id/confirm_account_space3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_pools_activity_intra_group_separation"
        android:layout_below="@id/confirm_account_message2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/confirm_account_username"
        android:layout_width="300dp"
        android:layout_height="@dimen/user_pools_activity_text_height"
        android:hint="@string/username_text"
        android:inputType="textPersonName"
        android:layout_above="@+id/confirm_account_confirmation_code"
        android:layout_alignLeft="@+id/confirm_account_confirmation_code"
        android:layout_alignStart="@+id/confirm_account_confirmation_code" />

    <Space
        android:id="@+id/confirm_account_space4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_pools_activity_intra_group_separation"
        android:layout_below="@id/confirm_account_username" />

    <EditText
        android:id="@+id/confirm_account_confirmation_code"
        android:layout_width="300dp"
        android:layout_height="@dimen/user_pools_activity_text_height"
        android:hint="@string/sign_up_confirm_code"
        android:inputType="number"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/confirm_account_button"
        android:layout_alignStart="@+id/confirm_account_button" />

    <Space
        android:id="@+id/confirm_account_space5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_pools_activity_intra_group_separation"
        android:layout_below="@id/confirm_account_confirmation_code" />

    <Button
        android:id="@+id/confirm_account_button"
        android:layout_width="300dp"
        android:layout_height="@dimen/user_pools_activity_button_height"
        android:background="@drawable/redbutton"
        android:onClick="confirmAccount"
        android:text="@string/sign_up_confirm_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/user_pools_activity_button_text_size"
        android:layout_marginBottom="143dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
